# offer-scout-ai

./: .env.example  .gitignore  README.md  docker-compose.yml
infra/main/: .terraform.lock.hcl  main.tf  versions.tf
scout-agent/: .dockerignore  AGENTS.md  Dockerfile  README.md  build.gradle.kts  settings.gradle.kts
scout-agent/skills/kotlin-spring-logging/: SKILL.md
scout-agent/skills/kotlin-spring-testing/: SKILL.md
scout-agent/src/main/kotlin/com/github/constantinet/offerscoutai/agent/: ScoutAgentApplication.kt
scout-agent/src/main/resources/: application-local.example.yml  application.yml
scout-agent/src/main/resources/prompts/: offer-evaluation-system.st
scout-coordinator/: .dockerignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
scout-coordinator/src/scout_coordinator/: __init__.py  config.py  logging_context.py  main.py  models.py
scout-coordinator/src/scout_coordinator/attachments/: __init__.py  extractor.py
scout-coordinator/src/scout_coordinator/integrations/: gmail.py  resend.py  scout_agent.py
scout-coordinator/src/scout_coordinator/processing/: __init__.py  email_processor.py
scout-coordinator/src/scout_coordinator/tasks/: __init__.py  auth.py  cloud_tasks.py  local_tasks.py  publisher.py
scout-coordinator/tests/: test_attachments.py  test_cloud_tasks.py  test_email_processor.py  test_gmail_sender.py  test_local_tasks.py  test_logging_context.py  test_resend_client.py  test_scout_agent_client.py  test_task_auth.py  test_task_endpoint.py  test_webhooks.py
(+16 files in other folders)
