[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scout-coordinator"
version = "0.2.0.dev0"
requires-python = ">=3.12"
description = "Email coordinator for Offer Scout AI"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["scout_coordinator"]
branch = true

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = true
